--- a/scss/_hanpasscard.scss
+++ b/scss/_hanpasscard.scss
@@ -5,7 +5,7 @@
 }
 .sub-visual {
   &.hanpass-card {
-    height: auto;
+    height: rem(510px);
 
     .title {
       position: absolute;
@@ -15,9 +15,9 @@
       bottom: 0;
       .animation-hand {
         position: absolute;
-        left: 50%;
+        left: 52%;
         bottom: 0;
-        width: 40%;
+        width: rem(415px);
         height: auto;
       }
       h2 {
@@ -40,6 +40,7 @@
       display: block;
       position: relative;
       min-width: 100%;
+      height: 100%;
       top: inherit;
       left: inherit;
       transform: inherit;
