* 메인 화면 진행 중

--- a/scss/_jspark.scss
+++ b/scss/_jspark.scss
@@ -34,6 +34,13 @@
       line-height: 2rem;
     }
   }
+  .main-visual {
+    &-bg-01 {
+      background-position: 0 50%;
+      background-image: url(../../images/renewal/main-visual-01-01@3x.png);
+      background-repeat: no-repeat;
+    }
+  }
 }
 
 .main-conts {
