--- a/scss/_jspark.scss
+++ b/scss/_jspark.scss
@@ -471,7 +471,7 @@
     margin-top: 0;
   }
   &__txt {
-    font-family: NanumSquareB;
+    font-family: "Nanum Square";
     font-size: 22px;
     line-height: 1.82;
     color: #292929;
@@ -481,9 +481,9 @@
 // Main
 .main-title {
   display: block;
-  font-family: S-CoreDream-7;
+  font-family: "S-Core";
   font-size: 2.75rem;
-  font-weight: 800;
+  font-weight: 700;
   line-height: 4.0625rem;
   color: #353535;
   &__wrap {
