--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,8 +7,8 @@ $dark: #141414 !default;
 $light: #989898 !default;
 
 // Override Bootstrap font variables
-$font-family-sans-serif: "Noto Sans KR", "Apple SD Gothic Neo", "Helvetica Neue", Lato, sans-serif !default;
-$sub-font-family: "Noto Sans KR", "Apple SD Gothic Neo", "Helvetica Neue", Lato, sans-serif !default;
+$font-family-sans-serif: "Nanum Square", "S-Core" !default;
+$sub-font-family: "Nanum Square", "S-Core" !default;
 $body-bg: #fff;
 $body-color: #222;
 $line-height-base: 1;
